tests/TypeValidationTests/data/InvalidAssignmentTest.stderr.expect
./data/InvalidAssignmentTest.xpl:14:5: error: cannot not assign string variable to element value
./data/InvalidAssignmentTest.xpl:17:5: error: cannot not assign string variable to node[] value
./data/InvalidAssignmentTest.xpl:21:5: error: cannot not assign string variable to element value
./data/InvalidAssignmentTest.xpl:24:5: error: cannot not assign string variable to node[] value
./data/InvalidAssignmentTest.xpl:25:5: error: cannot not assign integer variable to string value
./data/InvalidAssignmentTest.xpl:26:5: error: cannot not assign integer variable to real value
./data/InvalidAssignmentTest.xpl:28:5: error: cannot not assign integer variable to element value
./data/InvalidAssignmentTest.xpl:29:5: error: cannot not assign integer variable to attribute value
./data/InvalidAssignmentTest.xpl:30:5: error: cannot not assign integer variable to pi value
./data/InvalidAssignmentTest.xpl:31:5: error: cannot not assign integer variable to node[] value
./data/InvalidAssignmentTest.xpl:32:5: error: cannot not assign real variable to string value
./data/InvalidAssignmentTest.xpl:35:5: error: cannot not assign real variable to element value
./data/InvalidAssignmentTest.xpl:36:5: error: cannot not assign real variable to attribute value
./data/InvalidAssignmentTest.xpl:37:5: error: cannot not assign real variable to pi value
./data/InvalidAssignmentTest.xpl:38:5: error: cannot not assign real variable to node[] value
./data/InvalidAssignmentTest.xpl:46:5: error: cannot not assign element variable to string value
./data/InvalidAssignmentTest.xpl:47:5: error: cannot not assign element variable to integer value
./data/InvalidAssignmentTest.xpl:48:5: error: cannot not assign element variable to real value
./data/InvalidAssignmentTest.xpl:49:5: error: cannot not assign element variable to boolean value
./data/InvalidAssignmentTest.xpl:50:5: error: cannot not assign element variable to attribute value
./data/InvalidAssignmentTest.xpl:51:5: error: cannot not assign element variable to pi value
./data/InvalidAssignmentTest.xpl:52:5: error: cannot not assign element variable to node[] value
./data/InvalidAssignmentTest.xpl:53:5: error: cannot not assign attribute variable to string value
./data/InvalidAssignmentTest.xpl:54:5: error: cannot not assign attribute variable to integer value
./data/InvalidAssignmentTest.xpl:55:5: error: cannot not assign attribute variable to real value
./data/InvalidAssignmentTest.xpl:56:5: error: cannot not assign attribute variable to boolean value
./data/InvalidAssignmentTest.xpl:57:5: error: cannot not assign attribute variable to element value
./data/InvalidAssignmentTest.xpl:58:5: error: cannot not assign attribute variable to pi value
./data/InvalidAssignmentTest.xpl:59:5: error: cannot not assign attribute variable to node[] value
./data/InvalidAssignmentTest.xpl:60:5: error: cannot not assign pi variable to string value
./data/InvalidAssignmentTest.xpl:61:5: error: cannot not assign pi variable to integer value
./data/InvalidAssignmentTest.xpl:62:5: error: cannot not assign pi variable to real value
./data/InvalidAssignmentTest.xpl:63:5: error: cannot not assign pi variable to boolean value
./data/InvalidAssignmentTest.xpl:64:5: error: cannot not assign pi variable to element value
./data/InvalidAssignmentTest.xpl:65:5: error: cannot not assign pi variable to attribute value
./data/InvalidAssignmentTest.xpl:66:5: error: cannot not assign pi variable to node[] value
./data/InvalidAssignmentTest.xpl:error: input contains errors
