tests/TypeValidationTests/data/InvalidAssignmentTest.xpl
node[] main() {
  string s;
  integer i;
  real r;
  boolean b;
  element e;
  attribute a;
  pi p;
  node[] q;

  s = i;
  s = r;
  s = b;
  s = e;
  s = a;
  s = p;
  s = q;
  s = i;
  s = r;
  s = b;
  s = e;
  s = a;
  s = p;
  s = q;
  i = s;
  i = r;
  i = b;
  i = e;
  i = a;
  i = p;
  i = q;
  r = s;
  r = i;
  r = b;
  r = e;
  r = a;
  r = p;
  r = q;
  b = s;
  b = i;
  b = r;
  b = e;
  b = a;
  b = p;
  b = q;
  e = s;
  e = i;
  e = r;
  e = b;
  e = a;
  e = p;
  e = q;
  a = s;
  a = i;
  a = r;
  a = b;
  a = e;
  a = p;
  a = q;
  p = s;
  p = i;
  p = r;
  p = b;
  p = e;
  p = a;
  p = q;
  q = s;
  q = i;
  q = r;
  q = b;
  q = e;
  q = a;
  q = p;
}
